[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/shortest_path/niveles/nivel_5.gd" type="Script" id=1]
[ext_resource path="res://scenes/shortest_path/Bases/SP_Camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/shortest_path/Bases/HUD_OVERLAY.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/shortest_path/Mapas/cdmx_subway.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/shortest_path/Mapas/cdmx_subway.gd" type="Script" id=5]
[ext_resource path="res://scenes/shortest_path/niveles/win_menu.tscn" type="PackedScene" id=6]

[node name="nivel_5" type="Node2D"]
script = ExtResource( 1 )

[node name="HUD_OVERLAY" parent="." instance=ExtResource( 3 )]

[node name="cdmx_subway" parent="." instance=ExtResource( 4 )]
script = ExtResource( 5 )

[node name="SP_Camera" parent="." instance=ExtResource( 2 )]

[node name="wonMenu" parent="." instance=ExtResource( 6 )]
